--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.6",
+    "@tanstack/react-query": "^5.81.2",
+    "axios": "^1.10.0",
+    "lodash.merge": "^4.6.2",
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -36,9 +39,11 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^29.0.0",
+    "@types/lodash.merge": "^4.6.9",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/tailwindcss": "^3.1.0",
