--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.6",
     "@tanstack/react-query": "^5.81.2",
+    "@types/leaflet": "^1.9.18",
     "axios": "^1.10.0",
+    "leaflet": "^1.9.4",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.4.38",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4"
   },
