--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.4"
