--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
