--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+
+# Vite
 VITE_VERSION="c=0.0.0"
+
+# RapidAPI
 VITE_APP_RAPIDAPI_KEY=""
 VITE_APP_RAPIDAPI_HOST=""
 VITE_APP_GEO_LOCATION_URL=""
+
+# Supabase
+VITE_APP_SUPABASE_URL=""
+VITE_APP_SUPABASE_ANON_KEY=""
