--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.6",
+    "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.81.2",
     "@types/leaflet": "^1.9.18",
     "axios": "^1.10.0",
