--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tanstack/react-query": "^5.81.2",
     "@types/leaflet": "^1.9.18",
     "axios": "^1.10.0",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "leaflet": "^1.9.4",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.4.38",
@@ -32,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.3",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^11.0.5",
