--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@phosphor-icons/react": "^2.1.6",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.81.2",
